--- a/rsc/css/style.css
+++ b/rsc/css/style.css
@@ -11,8 +11,8 @@ html {
 
 body {
   font-family: system-ui;
-  color: #555;
-  background-color: #f7f7f7;
+  color: #a5f3fc;
+  background-color: #083344;
   min-height: 100vh;
 
   display: flex;
@@ -36,7 +36,7 @@ body {
 }
 
 .country {
-  background-color: #fff;
+  background-color: #155e75;
   box-shadow: 0 2rem 5rem 1rem rgba(0, 0, 0, 0.1);
   font-size: 1.8rem;
   width: 30rem;
@@ -85,7 +85,7 @@ body {
   font-size: 1.4rem;
   margin-bottom: 2.5rem;
   text-transform: uppercase;
-  color: #888;
+  color: #22d3ee;
 }
 
 .country__row:not(:last-child) {
