--- a/rsc/css/style.css
+++ b/rsc/css/style.css
@@ -14,7 +14,7 @@ body {
   color: #a5f3fc;
   background-color: #083344;
   min-height: 100vh;
-
+  padding: 4em;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,17 +22,16 @@ body {
 
 .container {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   align-items: center;
+  max-width: 80%;
 }
 
 .countries {
-  /* margin-bottom: 8rem; */
   display: flex;
-
-  font-size: 2rem;
-  opacity: 0;
-  transition: opacity 1s;
+  flex-wrap: wrap; /* Allow items to wrap into new rows */
+  justify-content: center; /* Center items horizontally within the container */
+  gap: 2rem; /* Add some spacing between items */
 }
 
 .country {
@@ -104,8 +103,19 @@ body {
   padding: 2rem 5rem;
   border-radius: 0.7rem;
   color: white;
-  background-color: orangered;
+  background-color: #a21caf;
   cursor: pointer;
+  margin-top: 4em;
+}
+
+.btn-country:hover,
+.btn-country:focus {
+  background: rgb(63, 94, 251);
+  background: radial-gradient(
+    circle,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 107, 1) 100%
+  );
 }
 
 .images {
